# mand

./: .gitignore  README.md  data.json  pyproject.toml  requirements.txt  test.py
mand/: proxies.txt
mand/adapters/ah_nl/: runner.py  scraper.py
mand/adapters/dirk/: runner.py  scraper.py
mand/adapters/jumbo/: runner.py  scraper.py
mand/config/: logging.py  settings.py
mand/monitoring/: instrumentation.py  metrics.py
mand/normalization/: cleaners.py  internal_categories.py  llm_category.py  sanitize.py
mand/scheduling/: jobs.py  scheduler.py
mand/shared/: proxy_manager.py
mand/storage/: db.py  models.py  repository.py
scripts/: run_ah_nl_once.py  run_dirk_once.py  run_jumbo_once.py  start_scheduler.py
