[project]
name = "mand"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "APScheduler==3.10.4",
  "requests==2.32.3",
  "urllib3==2.2.3",
  "fake-useragent==1.5.1",
  "SQLAlchemy==2.0.36",
  "psycopg2-binary==2.9.9",
  "prometheus-client==0.21.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mand",
            "mand.adapters","mand.adapters.ah_nl",
            "mand.config","mand.monitoring","mand.normalization",
            "mand.scheduling","mand.storage"]
